--- a/TODO.txt
+++ b/TODO.txt
@@ -7,3 +7,4 @@
 
 * ArgDef vs. PropertyDef
 * TaskId class with func name and args
+* ClassEssence, DynEssence and ClassNode (with 'inhertis' ref or link)
