--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,17 @@
 
+* use item names as a part of Path
+
+* ArgDef vs. PropertyDef
+* TaskId class with func name and args
+* ClassEssence, DynEssence and ClassNode (with 'inhertis' ref or link)
+
+
+---------------------------------------------------------
+DONE:
 * treat a Link as an Item with an Essence with source & target properties with ItemRef
 * class LinkedEssence : public Essence
 * class LinkOwnerEssence : public Essence
 * class LinkEssence : public Essence
 * use LinkEssences as child items of LinkOwnerEssence and LinkOwnerEssence as a role child ("links") LinkedEssence
 
-* ArgDef vs. PropertyDef
-* TaskId class with func name and args
-* ClassEssence, DynEssence and ClassNode (with 'inhertis' ref or link)
+
