--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,7 @@
 * TaskId class with func name and args
 * ClassEssence, DynEssence and ClassNode (with 'inhertis' ref or link)
 * Action class as a function (consisting of Action calls)
+* use links for sorting Neurons and Layers
 
 ---------------------------------------------------------
 DONE:
